remove unnecessary padding -- hopefully fixes mobile scrollbars

--- a/src/app.css
+++ b/src/app.css
@@ -39,7 +39,5 @@ h1 {
 #app {
   max-width: 330px;
   margin: 0 auto;
-  padding: 2rem;
-  padding-bottom: 4rem;
   text-align: center;
 }
